--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,9 +88,12 @@ content h3 {
     }
 
     figure p {
-        border: 3px solid black;
-        background-color: white;
         margin: 20px 20px 20px 20px;
+        text-align: center;
+    }
+
+    .project-link{
+        text-decoration: none;
     }
 
     .run-buddy {
