--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,8 +99,8 @@ content h3 {
         background-image: url("../images/globe.png")
     }
 
-    .run-buddy {
-        background-image: url("../images/run-buddy-bg.jpg");
+    .DnD-Character-Generator {
+        background-image: url("../images/Banner.jpg");
         
     }
 
