added tavern masters

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,8 +104,8 @@ content h3 {
         
     }
 
-    .robot-gladiator {
-        background-image: url("../images/robot-gladiator-bg.jpg")
+    .tavern-masters {
+        background-image: url("../images/DungeonMaster.png")
     }
 
     .horiseon {
